...

    if (message.isNotBlank()) {
        AlertDialog(
            onDismissRequest = onDismissMessage,
            confirmButton = {
                TextButton(onClick = onDismissMessage) {
                    Text(text = "OK")
                }
            },
            title = {
                Text(text = "Th\u00f4ng b\u00e1o")
            },
            text = {
...
